Feat:cotinue html fundamentals and complete a excercise

--- a/Day 2 - HTML Fundamentals/index.html
+++ b/Day 2 - HTML Fundamentals/index.html
@@ -5,18 +5,60 @@
     <title>Day 2 - HTML Fundamentals</title>
   </head>
   <body>
-    <h1>This is heading 1</h1>
-    <h2>This is heading 2</h2>
-    <h3>This is heading 3</h3>
-    <h4>This is heading 4</h4>
-    <h5>This is heading 5</h5>
-    <h6>This is heading 6</h6>
+    <main>
+      <!--Heading-->
+      <section>
+        <h1>This is heading 1</h1>
+        <h2>This is heading 2</h2>
+        <h3>This is heading 3</h3>
+        <h4>This is heading 4</h4>
+        <h5>This is heading 5</h5>
+        <h6>This is heading 6</h6>
 
-    <p>This is the paragraph</p>
+        <p>This is the paragraph</p>
+      </section>
+      <!--Link and images-->
+      <section>
+        <a
+          href="https://github.com/Nikisha1234/introduction-to-web-development/tree/main/Day%201-%20HTML%20Boilerplate"
+          target="_blank"
+        >
+          This is a link.</a
+        >
+        <br /><br />
+        <img src="./public/download.jpg" alt="A background" width="" 200 />
+      </section>
+      <!--Lists-->
+      <section>
+        <ol>
+          <li>First item</li>
+          <li>Second Item</li>
+          <li>Third Item</li>
+        </ol>
+        <ul>
+          <li>First Item</li>
+          <li>Second Item</li>
+          <li>Third Item</li>
+        </ul>
+        <dl>
+          <dt>HTML</dt>
+          <dd>Hypertext Markup Language</dd>
 
-    <a
-      href="https://github.com/Nikisha1234/introduction-to-web-development/tree/main/Day%201-%20HTML%20Boilerplate"
-      target="_blank">
-      This is a link.</a>
+          <dt>CSS</dt>
+          <dd>Cascading Style Sheet</dd>
+
+          <dt>Javascript</dt>
+          <dd>A programming language for the web</dd>
+        </dl>
+      </section>
+      <!--Forms-->
+      <section>
+        <form>
+          <input type="text" required/>
+          <button>Submit</button>
+
+        </form>
+      </section>
+    </main>
   </body>
 </html>
