Feat: continue html fundamentals and complete excercise

--- a/Day 2 - HTML Fundamentals/excercise.html
+++ b/Day 2 - HTML Fundamentals/excercise.html
@@ -19,7 +19,7 @@
         <p><b>Blood Group: </b>0+</p>
         <p>
           <b>Email: </b
-          ><a href="mailto:mhrznniki@gmail.com">mhrznnikki@gmail.com</a>
+          ><a href="mailto:mhrznnikki@gmail.com">mhrznnikki@gmail.com</a>
         </p>
       </section>
       <section>
